--- a/eval-grades_DROGO.qmd
+++ b/eval-grades_DROGO.qmd
@@ -105,5 +105,14 @@ students |>
 ```
 
 
+### Question 8
+
+```{r}
+students |>
+  group_by(group)|>
+  summarise(median=round(median(age)))|>
+  knitr::kable()
+```
+
 
 
